--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,72 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
+a {
+    text-decoration: none;
+}
+/* Common */
 .container {
     width: 1170px;
     max-width: calc(100% - 48px);
     margin: 0 auto;
+}
+
+h1,
+h2,
+h3 {
+    font-family: "Sora", sans-serif;
+}
+
+input,
+textarea,
+select,
+button {
+    font-size: inherit;
+    font-family: inherit;
+}
+/* Header */
+.header {
+    background-color: #fffaf5;
+    padding: 26px 0 77px;
+}
+
+.header__body {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Navbar */
+.navbar__list {
+    display: flex;
+    gap: 36px;
+}
+
+.navbar__link {
+    font-weight: 500;
+    font-size: 1.4rem;
+    letter-spacing: 0%;
+    line-height: 14px;
+    color: #5e6085;
+    transition: 0.25s;
+}
+
+.navbar__link:hover {
+    color: #000958;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+.header__btn {
+    width: 117px;
+    height: 50px;
+    border: 1px solid #000958;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    font-size: 1.4rem;
+    line-height: 14px;
+    letter-spacing: 0%;
+    color: #000958;
 }
