--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1071,6 +1071,7 @@ button {
 /* Blog */
 .blog {
     background-color: #fffaf5;
+    padding-bottom: 131px;
 }
 
 .blog__row {
@@ -1159,4 +1160,124 @@ button {
     color: #656689;
     margin-top: 16px;
     max-width: 351px;
+}
+
+/* Footer */
+.footer {
+    padding-top: 52px;
+    background: linear-gradient(to right, #fff6ed 43%, #fffaf5 42%);
+}
+
+.footer__body {
+    display: flex;
+}
+
+.footer__contact {
+    width: 42%;
+    margin-top: 62px;
+}
+
+form {
+    margin-top: 35px;
+}
+
+.footer__email {
+    outline: none;
+    width: 268px;
+    height: 46px;
+    border: 1px solid #ff5b2e40;
+    background-color: #fff;
+    border-radius: 23px;
+    padding-left: 22px;
+}
+
+.footer__email::placeholder {
+    font-weight: 300;
+    font-size: 1.2rem;
+    color: #656689;
+    opacity: 0.8;
+}
+
+.footer__email-submit {
+    position: relative;
+    top: -46px;
+    right: -222px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    border: none;
+    border-radius: 50%;
+    width: 46px;
+    height: 46px;
+    background: #ff5b2e;
+    box-shadow: 0px 15px 28px -7px #ff5b2e4d;
+}
+
+.footer__email-submit:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.footer__social {
+    margin-top: 22px;
+}
+
+.footer__socila--heading {
+    font-weight: 600;
+    font-size: 1.8rem;
+    color: #000958;
+}
+
+.footer__socila--row {
+    display: flex;
+    gap: 16px;
+    margin-top: 16px;
+}
+
+.social-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.footer__more-info {
+    /* flex: 1; */
+}
+
+.footer__row {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 58px 137px;
+    padding-left: 129px;
+}
+
+.footer__heading {
+    font-weight: 600;
+    font-size: 1.8rem;
+    color: #000958;
+}
+
+.footer__list {
+    margin-top: 14px;
+}
+
+.footer__link {
+    font-weight: 400;
+    font-size: 1.4rem;
+    color: #656689;
+    line-height: 28px;
+}
+
+.copyright {
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: #656689;
+    opacity: 0.5;
+    margin-top: 52px;
+    margin-bottom: 48px;
 }
